--- a/260205_investment_tv.html
+++ b/260205_investment_tv.html
@@ -309,7 +309,7 @@
         <div class="header">
             <h1>📉 2월 4일 테크주 폭락 분석</h1>
             <div class="date">2026년 2월 5일 | 번개 멤버온리 방송</div>
-            <div class="source">출처: NOVA Real Invest</div>
+            <div class="source">출처: 투자는 인생tv</div>
         </div>
         
         <div class="content">
